--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "acorn": "^8.8.1",
     "and": "0.0.3",
     "axios": "^1.2.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "bookshelf": "^1.2.0",
     "classnames": "^2.3.2",
@@ -37,6 +38,7 @@
     "express": "^5.0.0-alpha.7",
     "helmet": "^6.0.1",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
