--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hidden-easter-egg": "^1.0.5",
+    "react-raining-confetti": "^1.0.1",
     "react-router-dom": "^6.4.3",
     "serve-favicon": "^2.5.0",
     "swagger-autogen": "^2.22.0",
