--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Nuit de l'info 2022",
+  "name": "nuit-info",
   "version": "1.0.0",
   "description": "Nuit de l'info 2022",
   "scripts": {
